# jquants-python-lib

./: LICENSE  README.md  pyproject.toml
jquantslib/: __init__.py  base_client.py  cache_client.py  utils.py
jquantslib/files/: market_information.csv  sector_information.csv
